Changes for adding bootstrap,jquery and react libraries

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,25 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tech Release - About Us</title>
-  </head>
-  <body>
-    <div id="our_root_page"></div>
-  </body>
+    <script type="text/javascript" src="Javascript/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="Javascript/bootstrap.min.js"></script>
+
+    </script>
+    <script src="Javascript/svg.js"></script>
+    <script type="text/javascript" src="Javascript/jquery.js"></script>
+    <script type="text/javascript" src="Javascript/bootstrap.min.js"></script>
+    <script src="Javascript/react.js"></script>
+    <script src="Javascript/react-dom.js"></script>
+    <script type="text/javascript" src="Javascript/daterangepicker.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    </script>
+    <title>Tech Release</title>
+</head>
+<body>
+<div id="our_root_page"></div>
+<script src="bundle.js"></script>
+<div id="result"></div>
+</body>
 </html>
